language/move-lang/tests/move_check/parser/function_acquires_trailing_comma.move
module M {
    resource struct X {}
    // Test a trailing comma in the acquires list.
    fun f() acquires X, {
        borrow_global_mut<X>(0x1);
    }
}
